# CallHandlingCenter-Protei-CW

./: CMakeLists.txt  README.md  build.sh  conanfile.txt
src/: CMakeLists.txt  configuration.json  main.cpp
src/CDR/: CDR.cpp  CDR.hpp
src/Call/: Call.cpp  Call.hpp  CallQueue.cpp  CallQueue.hpp
src/CallCenter/: CallCenter.cpp  CallCenter.hpp  CallCenterConfig.hpp
src/Operator/: Operator.cpp  Operator.hpp
tests/: CDRTest.cpp  CMakeLists.txt  CallCenterConfigTest.cpp  CallQueueTest.cpp
